# arcollect

./: .gitmodules  COPYING.rtf  Doxyfile  README.md  THIRD-PARTY.md  config.txt  dependency-report.hpp  meson.build  meson_options.txt
cmake/: BZip2Config.cmake  BoostConfig.cmake  BrotliConfig.cmake  JPEGConfig.cmake  OpenEXRConfig.cmake  README.md  TIFFConfig.cmake  ZLIBConfig.cmake  fmtConfig.cmake  meson.build
cmake-modules/: FindBrotli.cmake  FindZLIB-template.cmake  FindZLIB.cmake  README.md  meson.build
common/: arcollect-db-comics.hpp  arcollect-db-downloads.hpp  arcollect-db-open.hpp  arcollect-debug.hpp  arcollect-paths.hpp  db-open.cpp  debug.cpp  downloads.cpp  md5.cpp  md5.hpp  meson.build  paths.cpp
common/sqlite3-hpp/: README  sqlite3.hpp
common/tests/: meson.build  test-download-scenario0.cpp  test-md5.cpp
db-schema/: README.md  boot.sql  gen-schema-sources.cpp  init.sql  meson.build  preload_artworks.sql
desktop-app/: README.md  arcollect.desktop  config.cpp  config.hpp  i18n.cpp  i18n.hpp  main-xdg.cpp  main.cpp  meson.build  time.hpp
desktop-app/art-reader/: art-reader.hpp  image-thumb-xdg.cpp  image.cpp  image.hpp  text-rtf.cpp  text.cpp  text.hpp
desktop-app/db/: account.cpp  account.hpp  artwork-collection.cpp  artwork-collection.hpp  artwork-collections.hpp  artwork-loader.cpp  artwork-loader.hpp  artwork.cpp  artwork.hpp  db.cpp  db.hpp  download.cpp  download.hpp  filter.cpp  filter.hpp  search.cpp  search.hpp  sorting.cpp  sorting.hpp
desktop-app/gui/: about.cpp  about.hpp  animation.hpp  artwork-collection-sqlite.hpp  artwork-collection.hpp  artwork-collections.hpp  artwork-viewport.cpp  artwork-viewport.hpp  edit-art.cpp  edit-art.hpp  first-run.cpp  first-run.hpp  font-internal.hpp  font-query-embed.cpp  font-roboto.cpp  font.cpp  font.hpp  main.cpp  main.hpp  menu-db-object.cpp  menu-db-object.hpp  menu.cpp  menu.hpp  modal.cpp  modal.hpp  rating-selector.cpp  rating-selector.hpp  scrolling-text.cpp  scrolling-text.hpp  search-osd.cpp  search-osd.hpp  slideshow.cpp  slideshow.hpp  sqlite-busy-handler.cpp  view-grid.cpp  view-slideshow.cpp  view-slideshow.hpp  view-vgrid.hpp  view.hpp  views.hpp  (+2 more)
desktop-app/sdl2-hpp/: README  SDL.hpp  SDL_error.hpp  SDL_event.hpp  SDL_hint.hpp  SDL_pixels.hpp  SDL_rect.hpp  SDL_render.hpp  SDL_video.hpp
desktop-app/tests/: meson.build  test-config.cpp  test-mime-extract-charset.cpp  test-search-tokenizer.cpp  test-search.cpp
desktop-app/xdg/: arcollect.desktop  arcollect.metainfo.xml  dbus-helper.hpp  dbus.cpp  dbus.hpp  dbus.service  font.cpp  fontconfig.hpp  freedesktop-application.cpp  generate-desktop-file.cpp  generate-metainfo-xml.cpp  generate-xdg-files.cpp  generate-xdg-files.hpp  gnome-shell-search-provider.cpp  gnome-shell-search-provider.ini  introspect.xml.in  me.d_spirits.arcollect.desktop  meson.build  org.freedesktop.LowMemoryMonitor.cpp
i18n/: README.md  arcollect-i18n-common.hpp  arcollect-i18n-desktop_app.hpp  arcollect-i18n-struct-autogenerated.hpp  arcollect-i18n-webextension.hpp  arcollect-i18n.hpp  meson.build  module-template.cpp  po-cpp-gen.py  po-hpp-gen.py  po-wxl-gen.py  template-arcollect-i18n-module.hpp
i18n/l10n-C/: common.cpp  common.po  desktop_app.cpp  desktop_app.po  msi-installer.po  webextension.cpp  webextension.po
i18n/l10n-fr/: common.cpp  common.po  desktop_app.cpp  desktop_app.po  webextension.cpp  webextension.po
i18n/l10n-fr_FR/: msi-installer.po
packaging/: .gitignore  PKGBUILD.in  README.md  arcollect.wxs  control.in  copying_to_rtf.py  generate-PKGBUILD.sh  generate-flatpak.sh  generate-wix-config.py  meson.build  script-common.sh
sqls/: README.md  adder_cache_account.sql  adder_cache_artwork.sql  adder_cache_comic.sql  adder_cache_tag.sql  adder_insert_acc_icon.sql  adder_insert_account.sql  adder_insert_art_acc_link.sql  adder_insert_art_tag_link.sql  adder_insert_artwork.sql  adder_insert_com_acc_link.sql  adder_insert_com_tag_link.sql  adder_insert_comic.sql  adder_insert_tag.sql  adder_update_account.sql  adder_update_artwork.sql  adder_update_artwork_comic.sql  adder_update_comic.sql  adder_update_tag.sql  allocate_comicid.sql  arcollect-sqls-template.hpp  artworks_flags_by_dwn_id.sql  boot.sql  cache_mv_art_dwnid.sql  delete_artwork.sql  delete_download.sql  downloads_move_refs.sql  downloads_new_entry.sql  downloads_unsource.sql  gen-schema-sources.cpp  init.sql  meson.build  preload_artworks.sql  upgrade_v2.sql  upgrade_v3.sql  webext-find-download.sql
sqls/tests/: meson.build  test-sql-prepare.cpp
subprojects/OpenImageIO/: meson.build  meson_options.txt
subprojects/libcurl/: meson.build  meson_options.txt
subprojects/sdl2/: meson.build
webext-adder/: README.md  adder-helpers.hpp  adder.cpp  appmanifest-firefox.json.in  curl.hpp  download.cpp  download.hpp  json-shared-helpers.hpp  json_escaper.hpp  main.cpp  meson.build  wtf_json_parser-string_view.hpp  wtf_json_parser.hpp
webext-adder/tests/: WebextAdder.py  artstation.com.json  db_check.py  deviantart.com.json  e621.net-nsfw.json  e621.net.json  furaffinity.net-nsfw.json  furaffinity.net.json  knowyourmeme.com.json  make_test_payload.py  meson.build  pixiv.net-nsfw.json  pixiv.net.json  test_payloads.py  test_referrer_policy.cpp  test_wtf_json_parser.cpp  test_wtf_json_parser.py  tumbex.com.json  webext-adder-test.py
webextension/: appmanifest-firefox.json.in  background.js  build.sh  build_zip.py  fetch.js  generate-messages.cpp  manifest.json  manifest.json.in  meson.build  twitter.js  web-ext-lint.sh
webextension/content-scripts/: SaveControlHelper.js  artstation.com.js  common-foot.js  common-head.js  common.js  deviantart.com.js  e621.net-keyboard_shortcuts.js  e621.net.js  furaffinity.net.js  knowyourmeme.com.js  meson.build  patreon.com.js  pixiv.net.js  tumbex.com.js  tumblr.com-shared.js  twitter.com.js  xkcd.com.js
webextension/tests/: WebDriver.py  browser_geckodriver.py  meson.build  platform_artstation.py  platform_deviantart.py  platform_e621.py  platform_furaffinity.py  platform_knowyourmeme.py  platform_pixiv.py  platform_tumbex.py  (+2 more)
(+127 files in other folders)
