option('enable_webextension', type: 'boolean', value: true, description: 'Build the webextension.')
option('enable_native_progs', type: 'boolean', value: true, description: 'Build C++ code (desktop-app, webext-adder, ...). It is used and set to false in the webextension CI.')
option('fatal_cpp_feature_miss', type: 'boolean', value: true, description: 'Fail if a C++ feature is not found.')
option('tests_online', type: 'boolean', value: false, description: 'Enable tests to download data from the internet.')
option('tests_browser', type: 'boolean', value: false, description: 'Enable in-browser web-extension tests (ignore -Dtest_online).')
option('tests_nsfw', type: 'boolean', value: false, description: 'Download and display NSFW content in tests. By setting this setting to true, you agree that you can legally see adult oriented content.')
option('with_xdg', type: 'feature', value: 'auto', description: 'Integrate with XDG compliant desktops.')
